sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:14: error: type mismatch;
 found   : Unit
 required: Boolean
    if (swapped = true){
                ^